RESOLVED FIXED285715
Apple Music (MusicKit SDK) authentication fails when Advanced Privacy Protections are enabled
https://bugs.webkit.org/show_bug.cgi?id=285715
Summary Apple Music (MusicKit SDK) authentication fails when Advanced Privacy Protect...
Wenson Hsieh
Reported 2025-01-09 17:08:01 PST
Attachments
Wenson Hsieh
Comment 1 2025-01-09 21:42:01 PST
EWS
Comment 2 2025-01-10 07:44:24 PST
Committed 288708@main (9688876df525): <https://commits.webkit.org/288708@main> Reviewed commits have been landed. Closing PR #38825 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.